# runenv

./: .gitignore  .mkchangelog  .readthedocs.yaml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  commit.txt  flake.nix  mkdocs.yml  pyproject.toml  requirements-docs.txt  requirements.txt  setup.py  shell.nix  tox.ini
.github/workflows/: test.yml
.mkchangelog.d/versions/v0.1.0/commits/: initial.txt
.mkchangelog.d/versions/v0.1.1/commits/: artificial.txt
.mkchangelog.d/versions/v0.1.2/commits/: artificial.txt
.mkchangelog.d/versions/v0.1.3/commits/: artificial.txt
.mkchangelog.d/versions/v0.1.4/commits/: artificial.txt
.mkchangelog.d/versions/v0.2.0/commits/: artificial.txt
.mkchangelog.d/versions/v0.2.1/commits/: artificial.txt
.mkchangelog.d/versions/v0.2.2/commits/: artificial.txt
.mkchangelog.d/versions/v0.2.3/commits/: artificial.txt
.mkchangelog.d/versions/v0.2.4/commits/: artificial.txt
.mkchangelog.d/versions/v0.3.0/commits/: artificial.txt
.mkchangelog.d/versions/v0.3.1/commits/: artificial.txt
.mkchangelog.d/versions/v0.4.0/commits/: artificial.txt
.mkchangelog.d/versions/v1.0.0/commits/: artificial.txt  docs.txt  feat.txt
.mkchangelog.d/versions/v1.0.1/commits/: artificial.txt
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
runenv/: __about__.py  __init__.py
src/runenv/: __about__.py  __init__.py  api.py  cli.py  legacy.py  parser.py
tests/: __init__.py  env.search_grandparent  env.search_parent  env.test  test_api.py  test_cli.py  test_envfile.py  test_legacy_cli.py  test_parser.py  test_runenv.py
tests/cwd/: .env  env.custom
tests/search_parent/: env.search_parent
